--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask
-Flask-SQLAlchemy
-Werkzeug
-psycopg2-binary
-gunicorn
+Flask==2.3.2
+Flask-SQLAlchemy==3.1.1
+Werkzeug==3.1.3
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
